{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 13,
  "lineage": "bd5a936e-855c-8600-fc9c-a6b332b6e689",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:585008053469:instance/i-0cb3c7bdb864e19c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb3c7bdb864e19c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e9c8e5330d6d436",
            "private_dns": "ip-10-0-0-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.64",
            "public_dns": "ec2-54-226-12-114.compute-1.amazonaws.com",
            "public_ip": "54.226.12.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a0a8c367b236f4c1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c412f6c75c35eddd",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Prod-Server",
              "Owner": "pavan"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Prod-Server",
              "Owner": "pavan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0629ef173fcee695c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.Public-Subnet-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Ig-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585008053469:internet-gateway/igw-06ebe3e4c78917ff3",
            "id": "igw-06ebe3e4c78917ff3",
            "owner_id": "585008053469",
            "tags": {
              "Name": "Ig-Terraform",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Ig-Terraform",
              "Service": "Terraform"
            },
            "vpc_id": "vpc-0eb16a6b3a46cd189"
          },
          "dependencies": [
            "aws_vpc.vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585008053469:route-table/rtb-0a2a6a55efd83e62f",
            "id": "rtb-0a2a6a55efd83e62f",
            "owner_id": "585008053469",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ebe3e4c78917ff3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-Terraform",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Public-RT-Terraform",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb16a6b3a46cd189"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Ig-Terraform",
            "aws_vpc.vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-RT-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b14827364371e6c6",
            "route_table_id": "rtb-0a2a6a55efd83e62f",
            "subnet_id": "subnet-0c412f6c75c35eddd"
          },
          "dependencies": [
            "aws_internet_gateway.Ig-Terraform",
            "aws_route_table.Public-RT-Terraform",
            "aws_subnet.Public-Subnet-Terraform",
            "aws_vpc.vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585008053469:security-group/sg-0629ef173fcee695c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0629ef173fcee695c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241119201355739300000001",
            "name_prefix": "terraform-",
            "owner_id": "585008053469",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "SG-Terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb16a6b3a46cd189"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585008053469:subnet/subnet-0c412f6c75c35eddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c412f6c75c35eddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585008053469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-Terraform",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Public-Subnet-Terraform",
              "Service": "Terraform"
            },
            "vpc_id": "vpc-0eb16a6b3a46cd189"
          },
          "dependencies": [
            "aws_vpc.vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585008053469:vpc/vpc-0eb16a6b3a46cd189",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09906c61cfc20ea3d",
            "default_route_table_id": "rtb-035a8d36a83d1c71a",
            "default_security_group_id": "sg-0578206bbdc26e0d2",
            "dhcp_options_id": "dopt-0d3787d5bc36b6a81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb16a6b3a46cd189",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035a8d36a83d1c71a",
            "owner_id": "585008053469",
            "tags": {
              "Name": "vpc-Terraform",
              "service": "Terraform"
            },
            "tags_all": {
              "Name": "vpc-Terraform",
              "service": "Terraform"
            }
          }
        }
      ]
    }
  ]
}